Lab 8 with Express & Authentication done

--- a/html/comments.html
+++ b/html/comments.html
@@ -4,11 +4,7 @@
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script>
 
-$(document).ready(function(){      
-  var url = "./comment";
-  $('#btnShow').click(function() { 
-
-    $.getJSON(url, function(data) {
+function formatComments(data) {
       var everything;
       everything = "<h3>Comments</h3><ul>";
       $.each(data, function(i,item) {
@@ -16,25 +12,49 @@ $(document).ready(function(){
         });
         everything += "</ul>";
         $("#json").html(everything);
-      })
+};
 
 
+$(document).ready(function(){      
+  var url = "./comment";
+  $('#btnShow').click(function() { 
+	if($("#json").html() != "") {
+		$("#json").html(""); 
+	}
+	else {
+		$.getJSON(url, formatComments);
+	}
   });
+
   $('#btnSubmit').click(function(){
     var myobj = {Name:$("#Name").val(),Comment:$("#Comment").val()};
     console.log("Object: ");
     console.log(myobj);
     jobj = JSON.stringify(myobj);
-    $.post(url, jobj, function (data, textStatus) { 
-      $("#done").append(textStatus);
+    
+	jQuery.ajax({
+		url: url,
+		type: "POST",
+		data: jobj,
+		dataType: "json",
+		contentType:  "application/json; charset=utf-8",
+           	success: function(){
+              		$("#done").append("Success");
+            	}
+        });
+    if($("#json").html() != "") {
+		$.getJSON(url, formatComments); 
+	}
     });
-  });
 });
 </script>
 </head>
 <body>
-<p> This is the comments page. Click below to go to the weather page<br/>
-<a href="./weather.html">Weather Page</a></p>
+<p>
+	<b><a href="./comments.html">Comments Page</a></b> -
+	<a href="./index.html">Index Page</a> - 
+	<a href="./weather.html">Weather Page</a>
+</p>
 <form id="commentForm" action="">
   Name: <input type="text" id="Name" name="Name" value="Mickey"><br>
   comment: <input type="text" id="Comment" name="Comment" value="Hello"><br>
@@ -42,7 +62,7 @@ $(document).ready(function(){
 
 <button id="btnSubmit" >Submit Comment</button> <br/> 
 
-<button id="btnShow"> Show Comments</button>
+<button id="btnShow">Toggle Comments</button>
 
 <div id="json"></div>
 
