--- a/html/weather.html
+++ b/html/weather.html
@@ -5,7 +5,11 @@
 </head>
 <body>
 	<div>
-		<p>This is the weather page. Click below to go to the comments page:<br/><a href="./comments.html">Comments Page</a></p>
+		<p>
+			<a href="./comments.html">Comments Page</a> -
+			<a href="./index.html">Index Page</a> - 
+			<b><a href="./weather.html">Weather Page</a></b>
+		</p>
 		<form>
                 Enter a Utah City: <input id="cityField" type="text" value="" /> <br />
                 Suggestion: <span id="txtHint">Empty</span>
