--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Directory Listing for ./</title>
+<title>Index Page for CS 360 Site</title>
 <meta http-equiv="pragma" content="no-cache">
 </head>
 <body>
@@ -10,18 +10,17 @@ Name
 </h3>
 <hr />
 <ul>
-<li><a href="?path=/">Parent Directory</a></li>
-<li><a href="index.php">index.php</a></li>
+<li><a href="comments.html">Comments Page</a></li>
+<li><a href="weather.html">Weather Page</a></li>
 <li><a href="test1.html">test1.html</a></li>
 <li><a href="test2.txt">test2.txt</a></li>
 <li><a href="test3.gif">test3.gif</a></li>
 <li><a href="test4.jpg">test4.jpg</a></li>
 <li><a href="test5.cgi">test5.cgi</a></li>
-<li><a herf="test5.txt">test5.txt</a></li>
+<li><a href="test5.txt">test5.txt</a></li>
 <li><a href="test6.cgi">test6.cgi</a></li>
 <li><a href="test6.txt">test6.txt</a></li>
 <li><a href="testfile">testfile</a></li>
-<li><a href="weather.html">Weather Page</a></li>
 </ul>
 </body>
 </html>
